# Vitruvius

./: .gitignore  LICENSE  README.md
Vitruvius/: Cargo.toml  README.md  install.sh
Vitruvius/docs/: index.html
Vitruvius/gui/: vitruvius_gui.html  vitruvius_gui_2.0.html
Vitruvius/src/: crypto.rs  dump_files.sh  identity.rs  main.rs  network.rs  state.rs  storage.rs  tofu.rs  watcher.rs
Vitruvius/src/gui/: http.rs  types.rs  ws.rs
Vitruvius/src/sync/: handler.rs
